@@ -1,5 +1,3 @@
-AUX libqxt-0.5.0-gcc4.4.patch 260 RMD160 59648526b4d43f65c32cc5cc7b38758b18a39d93 SHA1 81c0e767b40077b5385c395a51da023e64202496 SHA256 49d934981db89569c0b961c9661f3199512bad5f774adf5db3b9029195ee66c2
-DIST libqxt-0.5.0.tgz 4127658 RMD160 794e77c939625a0a895796a4ebbf68afedbc36f4 SHA1 1efc37f7128a9300034030ad4ae57f5f6d3a8db9 SHA256 b4b43833edf0b42990ab499cda0132d112a6a2ed14a58b91a88b91470741cce6
-EBUILD libqxt-0.5.0.ebuild 1694 RMD160 f4cc29dbb83fc4e2a32232f356d077a92cf33d66 SHA1 35a6f8c503303cac1279106bac528c9f185e2d08 SHA256 662354757fb5a15f99197ab79157203d38b15f19bd930cc6a091dfdbfd54714b
-EBUILD libqxt-9999.ebuild 1292 RMD160 6c4dbecc5a9aa665320a8d33ca0aea26fa9285da SHA1 f0f5b124e65fecd78a28c73cfad8248d5167baa0 SHA256 decc1d190d69d666f0ece6c68b9d60f730868670c923e631b94d354c2b4de443
-MISC ChangeLog 1129 RMD160 e7cd7f037bed832eb2e0ffd2062c17a361105220 SHA1 2abd205fb2f45b13b2bea81e26194ceac7be8862 SHA256 e76a360aedaddaba113bcc62fc012d44f2bf5dc202ac01d5ebd0ef85cd704c98
+AUX libqxt-9999-gcc4.4.patch 260 RMD160 59648526b4d43f65c32cc5cc7b38758b18a39d93 SHA1 81c0e767b40077b5385c395a51da023e64202496 SHA256 49d934981db89569c0b961c9661f3199512bad5f774adf5db3b9029195ee66c2
+EBUILD libqxt-9999.ebuild 1338 RMD160 181c363d84cab8b6c33217ec67b0bf87f170511a SHA1 2a7e7ce9383d81e33d3921d6f43d36ba1f620658 SHA256 9461474944b73d461c451c7cef2e29223c1b3450e662cf2a4d4e9c61a57dc6bf
+MISC ChangeLog 1346 RMD160 c96bbe05c9b455968403b7497902f59970069b93 SHA1 4b69c1768d0dc42d16b098181d402bdeff8c8385 SHA256 8ad7aedaaea598506f1402a58e932aff452b14a2c62bbc9c86ea3409f7fcacfb
