@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libqxt
 # Copyright 1999-2009 Berkano Overlay; distributed under the GPL version 2
 
+  15 Aug 2009; Markos Chandras <hwoarang@gentoo.org> -libqxt-0.5.0.ebuild,
+  -files/libqxt-0.5.0-gcc4.4.patch, libqxt-9999.ebuild,
+  +files/libqxt-9999-gcc4.4.patch:
+  Add missing gcc-4.4 patch. Add avahi dependency
+
   13 Jul 2009; Håvard Wall <haavardw@ifi.uio.no> +libqxt-0.5.0.ebuild,
   +files/libqxt-0.5.0-gcc4.4.patch:
   Compile with gcc-4.4 (bug 277591)
